# compute-oracle

./: .env.example  .gitignore  CONTEXT_FOR_ANALYSIS.md  PLAN.md  README.md
backend/: config.py  main.py  orchestrator.py  pyproject.toml
backend/api/: causal.py  cycle.py  learning.py  predictions.py  replay.py  router.py  scheduler.py  signals.py
backend/causal/: factors.py  graph.py  reasoner.py
backend/core/: llm_client.py  redis_client.py  weave_setup.py
backend/data/: electricity_caiso_2025_08.csv  spot_history_2025_08.csv
backend/evaluation/: evaluator.py  metrics.py
backend/ingestion/: aws_spot.py  base_source.py  eia_electricity.py  gpu_pricing.py  news.py  replay.py  weather.py
backend/learning/: learner.py  strategies.py
backend/prediction/: confidence.py  predictor.py
backend/scheduler/: optimizer.py
backend/schemas/: __init__.py  causal.py  learning.py  predictions.py  scheduler.py  signals.py
frontend/: .env.production  next.config.ts  package.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/dashboard/: AccuracyCurve.tsx  CausalGraph.tsx  LearningLog.tsx  PredictionTimeline.tsx  SavingsTracker.tsx  SchedulerView.tsx  SignalPanel.tsx  causal-graph.tsx  header.tsx  learning-curve.tsx  learning-log.tsx  panel-skeleton.tsx  prediction-panel.tsx  savings-tracker.tsx  scheduler-panel.tsx  (+1 more)
frontend/src/config/: constants.ts
frontend/src/hooks/: use-oracle-data.ts  useCausalGraph.ts  useLearning.ts  usePredictions.ts  useScheduler.ts  useSignals.ts
frontend/src/lib/: api.ts  types.ts
(+2 files in other folders)
